component: added skeleton popups wip

--- a/css/components/index.css
+++ b/css/components/index.css
@@ -32,3 +32,4 @@
 @import url(./shared/card-nft/card-nft.css);
 @import url(./shared/scroll-up-button/scroll-up-button.css);
 @import url(./shared/theme-switch/theme-switch.css);
+@import url(./shared/popup-settings/popup-settings.css);
