--- a/css/components/shared/popup-wallet/popup-wallet.css
+++ b/css/components/shared/popup-wallet/popup-wallet.css
@@ -1,30 +1,18 @@
 #walletModal-wrapper {
-  position: fixed;
   width: 100vw;
   height: 100vh;
-  display: none;
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.3);
-}
-#walletModal-wrapper .active {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  z-index: 999999;
 }
 #walletModal-wrapper #walletModal {
-  position: absolute;
   bottom: 0;
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 40rem;
   border-radius: 2.5rem;
-}
-#walletModal-wrapper #walletModal.active {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 #walletModal-wrapper #walletModal-b1 {
   display: flex;
@@ -93,7 +81,6 @@
 }
 #walletModal-wrapper #walletModal-b1-b {
   width: 50%;
-  display: none;
   flex-direction: column;
   justify-content: center;
   align-items: center;
