--- a/css/components/shared/navbar/navbar.css
+++ b/css/components/shared/navbar/navbar.css
@@ -10,7 +10,7 @@
   position: relative;
   text-decoration: none;
   color: var(--colors-textSubtle);
-  z-index: 999;
+  z-index: 99;
   transition: 200ms;
   transition-timing-function: ease-in-out;
   position: sticky;
@@ -154,6 +154,7 @@
   align-items: center;
   gap: 0.5rem;
   color: var(--colors-textSubtle);
+  cursor: pointer;
 }
 .navbar-r span {
   align-items: center;
