--- a/css/components/sections/home-3-section/home-3-section.css
+++ b/css/components/sections/home-3-section/home-3-section.css
@@ -116,6 +116,7 @@
 }
 .animation-box .btc:first-child {
   position: relative;
+  animation: 3s ease-in-out 1s infinite normal none running cake;
 }
 .animation-box .btc:first-child img {
   z-index: -2;
@@ -124,8 +125,14 @@
   height: auto;
   max-width: 428px;
 }
+.animation-box .btc:nth-child(2) {
+  animation: 3s ease-in-out 0.66s infinite normal none running stonks;
+}
 .animation-box .btc:nth-child(2) img {
   z-index: 0;
+}
+.animation-box .btc:nth-child(3) {
+  animation: 3s ease-in-out 0.33s infinite normal none running folder;
 }
 .animation-box .btc:nth-child(3) img {
   z-index: 2;
