--- a/css/components/sections/home-3-section/home-3-section.scss
+++ b/css/components/sections/home-3-section/home-3-section.scss
@@ -120,6 +120,7 @@
     left: 0;
     &:first-child {
       position: relative;
+      animation: 3s ease-in-out 1s infinite normal none running cake;
       img {
         z-index: -2;
       }
@@ -131,12 +132,14 @@
   }
 
   .btc:nth-child(2) {
+    animation: 3s ease-in-out 0.66s infinite normal none running stonks;
     img {
       z-index: 0;
     }
   }
 
   .btc:nth-child(3) {
+    animation: 3s ease-in-out 0.33s infinite normal none running folder;
     img {
       z-index: 2;
     }
