--- a/css/components/sections/home-5-section/home-5-section.scss
+++ b/css/components/sections/home-5-section/home-5-section.scss
@@ -1,4 +1,3 @@
-//-root to transfer in root page if/when done
 :root {
   --move-duration: 3s;
   --move-amount-x: 2%;
@@ -17,9 +16,9 @@
   position: relative;
   overflow: hidden;
   background: linear-gradient(180deg, #6fb6f1 0%, #eaf2f6 100%);
-
   z-index: 0;
-
+  padding-top: 15px;
+  padding-bottom: 15px;
   &-wrapper {
     margin: 0 auto;
     max-width: 62.5rem;
@@ -28,15 +27,13 @@
     -webkit-box-align: center;
     align-items: center;
     z-index: 1;
-    padding: 48px 0px;
-
     .glass {
       backdrop-filter: blur(12px);
       border-radius: 4.5rem;
       width: 100%;
       background: rgba(255, 255, 255, 0.6);
-      padding-top: 4.5rem;
-      padding-bottom: 4.5rem;
+      padding-top: 4.2rem;
+      padding-bottom: 4.2rem;
       gap: 2rem;
       max-width: 968px;
       display: flex;
@@ -50,7 +47,6 @@
         height: 100%;
         width: 100%;
         border-radius: 4.5rem;
-
         opacity: 0.33;
         z-index: -1;
         pointer-events: none;
@@ -67,7 +63,6 @@
         font-weight: 600;
         line-height: 1.1;
         color: var(--colors-text);
-
         &-color {
           color: var(--colors-secondary);
         }
@@ -297,47 +292,47 @@
 }
 
 @media screen and (min-width: 968px) {
-  .glass {
-    margin-right: 48px;
-    margin-left: 48px;
+  .section-5-wrapper {
+    padding: 48px;
   }
 }
 @media screen and (max-width: 851px) {
-  .glass {
+  .section-5-wrapper {
     padding: 40px;
-  }
-  .card-prizes {
-    &-container {
-      display: flex;
-      flex-direction: column;
-      max-width: 280px;
-      margin: 0 auto;
+
+    .small-title {
+      font-size: 20px;
+      font-weight: 600;
+      line-height: 1.1;
+      margin-bottom: 24px;
+      text-align: center;
     }
 
-    &--orange,
-    &--purple {
-      max-width: 275px;
-      position: static;
-      transform: rotate(0);
-    }
+    .card-prizes {
+      &-container {
+        display: flex;
+        flex-direction: column;
+        max-width: 280px;
+        margin: 0 auto;
+      }
 
-    &--orange {
-      margin-bottom: 32px;
+      &--orange,
+      &--purple {
+        max-width: 275px;
+        position: static;
+        transform: rotate(0);
+      }
+
+      &--orange {
+        margin-bottom: 32px;
+      }
     }
   }
 }
 
-@media screen and (max-width: 576px) {
-  .glass {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    margin: 0;
-    width: 100%;
-  }
-}
 @media screen and (min-width: 370px) {
-  .glass {
-    min-height: auto;
-    padding: 16px 24px;
+  .section-5-wrapper {
+    padding-right: 24px;
+    padding-left: 24px;
   }
 }
